Change the body font and fix the style a bit to make everything more readable

--- a/website/res/css/style.css
+++ b/website/res/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Andada-Regular';
-    src: url('/res/fonts/Andada-Regular.ttf') format('truetype');
+    font-family: 'Alegreya';
+    src: url('/res/fonts/Alegreya-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -20,7 +20,7 @@ body {
 	background-color: #E8E8E8;
 	margin: 0;
 	padding-bottom: 1em;
-	font-family: Andada-Regular, Sans-Serif;
+	font-family: Alegreya, Serif;
 	font-size: large;
 }
 .header {
@@ -80,22 +80,10 @@ body {
 }
 .text h1 {
 	margin-top: 0.5em;
+	text-align: center;
 }
 .text p {
 	margin: 0.5em 0 0.5em 0;
-}
-.recent {
-	float: right;
-	text-align: center;
-	width: 12em;
-	margin-left: 0;
-}
-.recent h3 {
-	margin: 0 auto;
-}
-.recent ul {
-	text-align: left;
-	padding-left: 1.25em;
 }
 .circlephoto{
 	--diameter: 200px;
